# kruiscijferraadsel

./: .gitignore  .pre-commit-config.yaml  README.md  derdemachten.txt  pyproject.toml
.github/workflows/: python-package.yml
kruiscijferraadsel/: __init__.py
tests/: conftest.py  test_cross.py  test_intersection.py  test_kruiscijferraadsel.py  test_numbers.py  test_parsing.py
